--- a/practicles/Mapping-Specification/pom.xml
+++ b/practicles/Mapping-Specification/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>lk.ijse</groupId>
-    <artifactId>annotation</artifactId>
+    <artifactId>Mapping-Specification</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>annotation</name>
+    <name>Mapping-Specification</name>
     <packaging>war</packaging>
 
     <properties>
@@ -35,11 +35,6 @@
             <artifactId>junit-jupiter-engine</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.32</version>
         </dependency>
     </dependencies>
 
