--- a/practicles/Mapping-Specification/pom.xml
+++ b/practicles/Mapping-Specification/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>lk.ijse</groupId>
     <artifactId>Mapping-Specification</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <name>Mapping-Specification</name>
     <packaging>war</packaging>
 
@@ -19,11 +19,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>4.0.1</version>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <version>6.0.0</version>
             <scope>provided</scope>
         </dependency>
+
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
