--- a/practicles/json_libs/pom.xml
+++ b/practicles/json_libs/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>lk.ijse</groupId>
-    <artifactId>json_libraries</artifactId>
+    <artifactId>json_libs</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>json_libraries</name>
+    <name>json_libs</name>
     <packaging>war</packaging>
 
     <properties>
@@ -19,20 +19,10 @@
 
     <dependencies>
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>4.0.1</version>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <version>5.0.0</version>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>jakarta.json</groupId>
-            <artifactId>jakarta.json-api</artifactId>
-            <version>2.1.3</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.parsson</groupId>
-            <artifactId>parsson</artifactId>
-            <version>1.1.5</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
