--- a/practicles/Test-Web/pom.xml
+++ b/practicles/Test-Web/pom.xml
@@ -22,7 +22,6 @@
             <groupId>org.eclipse</groupId>
             <artifactId>yasson</artifactId>
             <version>3.0.3</version>
-            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -31,11 +30,11 @@
             <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>jakarta.json</groupId>
-            <artifactId>jakarta.json-api</artifactId>
-            <version>2.1.3</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>jakarta.json</groupId>-->
+<!--            <artifactId>jakarta.json-api</artifactId>-->
+<!--            <version>2.1.3</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.eclipse.parsson</groupId>
             <artifactId>parsson</artifactId>
@@ -65,6 +64,7 @@
             <version>1.18.30</version>
             <scope>provided</scope>
         </dependency>
+
     </dependencies>
 
     <build>
